# Computer-Vision-classes

./: CamParams.xml  README.md
aula10/: aula10.cbp  aula10.layout  fileSource.cpp  fileSource.h  main.cpp
aula11/: aula11.cbp  aula11.layout  aula6.layout  fileSource.cpp  fileSource.h  main.cpp
aula2/: aula2.cbp  aula2.depend  aula2.layout  ex4.cpp  ex4.h  main.cpp
aula2/include/: ex4.h
aula2/src/: ex4.cpp
aula3/: aula3.cbp  aula3.depend  aula3.layout  fileSource.cpp  fileSource.h  main.cpp
aula3/include/: ex4.h
aula3/src/: ex4.cpp
aula4/: aula4.cbp  aula4.depend  aula4.layout  fileSource.cpp  fileSource.h  main.cpp
aula5/: aula5.cbp  aula5.depend  aula5.layout  fileSource.cpp  fileSource.h  main.cpp
aula5-resources/: CamParams.xml  chessboard.cpp
aula6/: aula6.cbp  aula6.depend  aula6.layout  fileSource.cpp  fileSource.h  main.cpp  stereoParams.xml
aula7/: CMakeLists.txt  SimpleFreenect.cpp  SimpleFreenect.hpp  aula7.cbp  aula7.layout  fileSource.cpp  fileSource.h  filt_kinect1_cozinha.pcd  filt_kinect1_cozinha2.pcd  filt_kinect1_quarto.pcd  filt_kinect1_quarto2.pcd  filt_office1.pcd  main.cpp  pcl_io.cpp  reconstruct.cpp  stereoParams.xml  viewFreenect.cpp  viewcloud_ex3.cpp  viewcloud_ex4.cpp
aula7/aula7-ex1-codeblocks/: SimpleFreenect.hpp  aula7.cbp  aula7.layout  fileSource.cpp  fileSource.h  pcl_io.cpp  stereoParams.xml
aula7/aula7-ex1-codeblocks/Depth_Images/: filt_office2.pcd
aula9/: aula9.cbp  aula9.depend  aula9.layout  fileSource.cpp  fileSource.h  main.cpp
aula9/ex1/: ex1.cbp  ex1.depend  ex1.layout  main.cpp
(+12 files in other folders)
